# convolve-wasm

./: .gitignore  .migration-preparation-marker  LICENSE  README.md  package-lock.json  package.json  site.config.json
.github/workflows/: apply-takana-labs-jsr-migration.yml  bootstrap-convolve-wasm-verify.yml  browser-matrix-probe.yml  ci.yml  npm-registry-probe.yml  pages.yml  publish-jsr.yml  publish.yml  release-candidate.yml
apps/demo/: index.html  package.json  vite.config.ts
crates/convolve-core/: Cargo.toml
crates/convolve-core/src/: convolution.rs  lib.rs  limits.rs  panning.rs  processor.rs  true_peak.rs  views.rs  wasm.rs  wav.rs
crates/convolve-core/tests/: convolution.rs  golden_fixtures.rs  output_goldens.rs  processor.rs  streaming_wav.rs  wasm_output_goldens.rs  wasm_output_goldens_node.rs
docs/: architecture.md  browser-support.md  mobile-crash-diagnostics.md  release-readiness.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md
scripts/: app-server.mjs  app.mjs  build-pages.mjs  npm-command.mjs  pages-artifact.mjs  pages-preflight.mjs  public-site-smoke.mjs  site-config.mjs  sync-site-url.mjs  validate-doc-assets.mjs  validate-pages.mjs  validate-project-identity.mjs  validate-repo-links.mjs  verify-android-release-gate.mjs
tests/: android-release-gate.test.mjs  lifecycle-contract.test.mjs  npm-command.test.mjs  pages-artifact.test.mjs  pages-failure-modes.test.mjs  pages-preflight.test.mjs  pages-workflows.test.mjs  public-site-smoke.test.mjs  release-011.test.mjs  release-012.test.mjs  site-config.test.mjs  site-url-sync.test.mjs
(+36 files in other folders)
