[package]
name = "convolve-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Deterministic Rust/WASM DSP core for browser-side stereo audio convolution"
repository = "https://github.com/takana-labs/convolve-wasm"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hound = "3.5"
js-sys = "0.3"
realfft = "3.5"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thiserror = "2"
wasm-bindgen = "0.2"

[dev-dependencies]
sha2 = "0.10"
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
